update java jvm doc